--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "axios": "^1.4.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
     "nanoid": "^4.0.2",
