--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "framer-motion": "^10.12.7",
     "nanoid": "^4.0.2",
     "prettier": "^2.8.8",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
+    "rxjs": "^7.8.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
