--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "rxjs": "^7.8.1",
     "yup": "^1.1.1"
